# signal

./: '  .gitignore  Cargo.toml  README.md  dev.db  setup.sql
.github/workflows/: rust.yml
client/: .env  Cargo.toml
client/client_db/: dev.db
client/client_db/migrations/: 20241115092655_init.sql
client/migrations/: 20241115092655_init.sql
client/src/: client.rs  client_common.rs  contact.rs  contact_manager.rs  encoder.rs  encryption.rs  errors.rs  key_manager.rs  main.rs  persistent_receiver.rs  server.rs  socket_manager.rs  storage.rs  websockets.rs
client/src/key_management/: bundle.rs  key_manager.rs  mod.rs
client/src/storage/: database.rs  device.rs  generic.rs  in_memory.rs  mod.rs  protocol_store.rs  serializations.rs  storage_trait.rs
client/src/test/: mod.rs
client/src/test_utils/: user.rs
common/: Cargo.toml  build.rs
common/proto/: SignalService.proto  WebSocketProtocol.proto
common/src/: device.rs  envelope.rs  errors.rs  key_bundle.rs  lib.rs  pre_key.rs  protocol_address.rs  user.rs  utils.rs  web_api.rs
common/src/web_api/: authorization.rs  errors.rs  mod.rs
common/src/websocket/: connection_state.rs  mod.rs  net_helper.rs  wsstream.rs
server/: .env  Cargo.toml  client.py  docker-compose.yml  test.py
server/cert/: generate_cert.sh  rootCA.crt  server.crt  server.key  server_cert_ext.cnf
server/database/: init.sql
server/migrations/: 20241001103744_tables.sql
server/src/: account.rs  account_authenticator.rs  api_error.rs  connection.rs  create_server.rs  database.rs  db.rs  db_api.rs  destination_device_validator.rs  envelope.rs  error.rs  in_memory_db.rs  main.rs  managers.rs  message_cache.rs  postgres.rs  query.rs  response.rs  server.rs  socket.rs
server/src/managers/: account_manager.rs  client_presence_manager.rs  key_manager.rs  message_persister.rs  messages_manager.rs  mock_db.rs  mock_helper.rs  mod.rs  state.rs
server/src/managers/websocket/: connection.rs  mod.rs  net_helper.rs  websocket_manager.rs  wsstream.rs
server/src/test_utils/: database.rs  key.rs  message_cache.rs  mod.rs  user.rs  websocket.rs
server/src/validators/: mod.rs  pre_key_signature_validator.rs
