[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
libsignal-core = { git = "https://github.com/Diesel-Jeans/libsignal.git", version = "0.1.0" }
libsignal-protocol = { git = "https://github.com/Diesel-Jeans/libsignal.git", version = "0.1.0" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
surf = "2.3.2"
serde = "1.0.210"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

anyhow = "1.0.89"
tokio-tungstenite = { version = "0.24.0", features = ["tokio-native-tls", "tokio-rustls", "native-tls", "native-tls-crate", "native-tls-vendored", "rustls"] }
async-std = "1.13.0"
serde_json = "1.0.128"
futures-util = "0.3.31"
url = "2.5.2"

[build-dependencies]
tonic-build = "0.12.3"
