[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
libsignal-core = { git = "https://github.com/Diesel-Jeans/libsignal.git", version = "0.1.0" }
libsignal-protocol = { git = "https://github.com/Diesel-Jeans/libsignal.git", version = "0.1.0" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
surf = { version = "2.3.2", features = ["h1-client"] }
serde = "1.0.210"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
dotenv = "0.15.0"
anyhow = "1.0.89"
tokio-tungstenite = "0.24.0"
async-std = "1.13.0"
serde_json = "1.0.128"
http-client = { version="6.5.3", features = ["h1_client", "default"] }
async-native-tls = "0.3.3"
base64 = "0.22.1"

[build-dependencies]
tonic-build = "0.12.3"
