[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
libsignal-core = { git = "https://github.com/Diesel-Jeans/libsignal.git", version = "0.1.0" }
libsignal-protocol = { git = "https://github.com/Diesel-Jeans/libsignal.git", version = "0.1.0" }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
rand = "0.8.5"
surf = { version = "2.3.2", features = ["h1-client"] }
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
anyhow = "1.0.89"
tokio-tungstenite = { version = "0.24.0", features = ["tokio-native-tls", "tokio-rustls", "native-tls", "native-tls-crate", "native-tls-vendored", "rustls"] }
async-std = "1.13.0"
serde_json = "1.0.128"
futures-util = "0.3.31"
url = "2.5.2"
prost = "0.13.3"
dotenv = "0.15.0"
native-tls = "0.2.12"
tokio-native-tls = "0.3.1"
axum = "0.7.7"
ws = "0.9.2"
socket2 = "0.5.7"
http-client = { version="6.5.3", features = ["h1_client", "default"] }
async-native-tls = "0.3.3"
base64 = "0.22.1"

[build-dependencies]
tonic-build = "0.12.3"
