[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"
tonic = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
libsignal-protocol = { git = "https://github.com/Diesel-Jeans/libsignal.git", version = "0.1.0" }
anyhow = "1.0.89"
uuid = {version = "1.11.0", features = ["serde"] }
base64 = "0.22.1"

[build-dependencies]
tonic-build = "0.12.3"
