[package]
name = "common"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
prost = "0.13.3"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["base64"] }
libsignal-protocol = { git = "https://github.com/Diesel-Jeans/libsignal.git", version = "0.1.0" }
anyhow = "1.0.89"
uuid = {version = "1.11.0", features = ["serde"] }
base64 = "0.22.1"
prost-build = "0.13.3"
futures-util = "0.3.30"
async-trait = "0.1.83"
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.6" 
serde_json = "1.0.128"
bon = "3.0.0"
derive_more = { version = "1.0.0", features = ["display", "error", "from"] }

[build-dependencies]
prost-build = "0.13.3"
