[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
libsignal-core = { git = "https://github.com/Diesel-Jeans/libsignal.git", version = "0.1.0" }
libsignal-protocol = { git = "https://github.com/Diesel-Jeans/libsignal.git", version = "0.1.0" }

common = { path = "../common" }
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.6", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
tower-http = { version = "0.6.1", features = ["cors, trace"] }
sha2 = "0.10"
sqlx = { version = "0.8.2", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
dotenv = "0.15.0"
bincode = "1.3.3"
serde_json = "1.0.128"

[build-dependencies]
tonic-build = "0.12.3"
