[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
libsignal-core = { git = "https://github.com/Diesel-Jeans/libsignal.git", version = "0.1.0" }
libsignal-protocol = { git = "https://github.com/Diesel-Jeans/libsignal.git", version = "0.1.0" }

common = { path = "../common" }
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.6", features = ["macros", "ws", "query", "http2", "multipart"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-tungstenite = "0.24.0"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
redis = "0.27.4"
deadpool-redis = "0.18.0"
uuid = { version = "1.10.0", features = ["v4"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
sha2 = "0.10"
hex = "0.4.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "macros"] }
dotenv = "0.15.0"
bincode = "1.3.3"
serde_json = "1.0.128"
anyhow = "1.0.89"
rustls = { version = "0.23.15", features = ["ring"] }
tonic = "0.12.3"
prost = "0.13.3"
url = "2.5.2"
async-trait = "0.1.83"
futures-util = "0.3.30"
headers = "0.4.0"
async-std = "1.13.0"
serial_test = "3.1.1"
base64 = "0.21.7"
chrono = "0.4.38"
hkdf = "0.12.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
env_filter = "0.1.2"
tower = "0.5.1"
hyper = { version = "1.5.0", features = ["full"] }
futures = "0.3.31"
log = "0.4.22"
tracing-appender = "0.2.3"

[build-dependencies]
tonic-build = "0.12.3"
